目標カードの表示のされ方を変更

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -23,6 +23,11 @@
             "functions": ["clsx", "cva", "cn"]
           }
         }
+      },
+      "complexity": {
+        "noExcessiveCognitiveComplexity": {
+          "level": "warn"
+        }
       }
     }
   }
